# dnf5

./: .clang-format  .clang-tidy  .gitignore  .mailmap  .packit.yaml  .pr_agent.toml  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS.md  CHANGELOG.md  CHANGES-DNF-5.md  CMakeLists.txt  CODING_STYLE.md  CONTRIBUTING.md  COPYING.md  Makefile  README.md  REVIEW.md  VERSION.cmake  clang-format  clang-format-changed  clang-tidy-changed  dnf5.spec  lgpl-2.0.txt  libdnf.spec  libdnf5.spec
bindings/: CMakeLists.txt
bindings/go/: CMakeLists.txt
bindings/libdnf/: base.i  common.i  comps.i  conf.i  logger.i  plugin.i  repo.i  rpm.i  shared.i  transaction.i
bindings/libdnf5/: advisory.i  base.i  common.i  comps.i  conf.i  exception.hpp  exception.i  exception_utils.i  logger.i  plugin.i  repo.i  rpm.i  shared.i  transaction.i  utils.i
bindings/libdnf5_cli/: progressbar.i
bindings/libdnf_cli/: progressbar.i
bindings/perl5/: CMakeLists.txt
bindings/python3/: CMakeLists.txt
bindings/ruby/: CMakeLists.txt
common/: CMakeLists.txt
common/utils/: auth.cpp  auth.hpp  deprecate.hpp  regex.hpp  string.cpp  string.hpp  url.cpp  url.hpp
dnf5/: CMakeLists.txt  README.plugins  cmdline_aliases.cpp  cmdline_aliases.hpp  context.cpp  context_impl.hpp  download_callbacks.cpp  download_callbacks.hpp  download_cb.cpp  download_cb.hpp  interaction_callbacks.cpp  interaction_callbacks.hpp  iplugin.cpp  library.cpp  library.hpp  main.cpp  offline.cpp  plugins.cpp  plugins.hpp  shared_options.cpp  signal_handlers.cpp  signal_handlers.hpp  utils.cpp  utils.hpp  version.cpp
dnf5-plugins/: CMakeLists.txt
dnf5-plugins/automatic_plugin/: CMakeLists.txt  automatic.cpp  automatic.hpp  automatic_cmd_plugin.cpp  config_automatic.cpp  config_automatic.hpp  download_callbacks_simple.cpp  download_callbacks_simple.hpp  email_message.cpp  email_message.hpp  emitters.cpp  emitters.hpp  transaction_callbacks_simple.cpp  transaction_callbacks_simple.hpp
dnf5-plugins/builddep_plugin/: CMakeLists.txt  builddep.cpp  builddep.hpp  builddep_cmd_plugin.cpp
dnf5-plugins/changelog_plugin/: CMakeLists.txt  changelog.cpp  changelog.hpp  changelog_cmd_plugin.cpp
dnf5-plugins/config-manager_plugin/: CMakeLists.txt  addrepo.cpp  addrepo.hpp  config-manager.cpp  config-manager.hpp  config-manager_cmd_plugin.cpp  repos.cpp  repos.hpp  setopt.cpp  setopt.hpp  setvar.cpp  setvar.hpp  shared.hpp  unsetopt.cpp  unsetopt.hpp  unsetvar.cpp  unsetvar.hpp
dnf5-plugins/copr_plugin/: CMakeLists.txt  copr.cpp  copr.hpp  copr_cmd_plugin.cpp  copr_config.cpp  copr_config.hpp  copr_constants.hpp  copr_debug.cpp  copr_disable.cpp  copr_enable.cpp  copr_list.cpp  copr_remove.cpp  copr_repo.cpp  copr_repo.hpp  download_file.cpp  download_file.hpp  helpers.cpp  helpers.hpp  json.cpp  json.hpp  os_release.cpp  os_release.hpp  tempfile.hpp
dnf5-plugins/manifest_plugin/: CMakeLists.txt  download_callbacks.cpp  download_callbacks.hpp  manifest.cpp  manifest.hpp  manifest_cmd_plugin.cpp  manifest_download.cpp  manifest_install.cpp  manifest_new.cpp  manifest_resolve.cpp
dnf5-plugins/needs_restarting_plugin/: CMakeLists.txt  needs_restarting.cpp  needs_restarting.hpp  needs_restarting_cmd_plugin.cpp
dnf5-plugins/obs_plugin/: CMakeLists.txt  download_file.cpp  download_file.hpp  helpers.hpp  html.cpp  html.hpp  obs.cpp  obs.hpp  obs_cmd_plugin.cpp  obs_config.cpp  obs_config.hpp  obs_constants.hpp  obs_debug.cpp  obs_disable.cpp  obs_enable.cpp  obs_list.cpp  obs_remove.cpp  obs_repo.cpp  obs_repo.hpp
dnf5-plugins/repoclosure_plugin/: CMakeLists.txt  repoclosure.cpp  repoclosure.hpp  repoclosure_cmd_plugin.cpp
dnf5-plugins/repomanage_plugin/: CMakeLists.txt  repomanage.cpp  repomanage.hpp  repomanage_cmd_plugin.cpp
dnf5-plugins/reposync_plugin/: CMakeLists.txt  reposync.cpp  reposync.hpp  reposync_cmd_plugin.cpp
dnf5-plugins/system_upgrade_plugin/: CMakeLists.txt  system_upgrade.cpp  (+3 more)
dnf5daemon-client/: CMakeLists.txt  callbacks.cpp  callbacks.hpp  context.cpp  context.hpp  exception.cpp  exception.hpp  main.cpp  utils.cpp  utils.hpp
dnf5daemon-server/: CMakeLists.txt  advisory.cpp  advisory.hpp  callbacks.cpp  callbacks.hpp  const.hpp  dbus.hpp  environment.cpp  environment.hpp  group.cpp  group.hpp  main.cpp  package.cpp  package.hpp  session.cpp  session.hpp  session_manager.cpp  session_manager.hpp  threads_manager.cpp  threads_manager.hpp  transaction.cpp  transaction.hpp  utils.cpp  utils.hpp
dnfdaemon-client/: CMakeLists.txt  argument_parser.cpp  argument_parser.hpp  callbacks.cpp  callbacks.hpp  context.cpp  context.hpp  main.cpp  utils.cpp  utils.hpp
dnfdaemon-server/: CMakeLists.txt  Session.cpp  Session.hpp  SessionManager.cpp  SessionManager.hpp  callbacks.cpp  callbacks.hpp  dbus.hpp  main.cpp  package.cpp  package.hpp  session.cpp  session.hpp  session_manager.cpp  session_manager.hpp  threads_manager.cpp  threads_manager.hpp  transaction.cpp  transaction.hpp  types.hpp  utils.hpp
doc/: CMakeLists.txt  Doxyfile.in  about.rst  atp.py  changes.rst  changes_from_dnf4.7.rst  conf.py.in  cpp_base.rst  cpp_comps.rst  cpp_module.rst  cpp_repo.rst  cpp_rpm.rst  cpp_transaction.rst  dnf5.8.rst  dnf5.conf-deprecated.5.rst  dnf5.conf-todo.5.rst  dnf5.conf-vendorpolicy-v1_0.5.rst  dnf5.conf-vendorpolicy-v1_1.5.rst  dnf5.conf-vendorpolicy.5.rst  dnf5.conf.5.rst  dnf5_workflow.rst  dnfdaemon_client.8.rst  dnfdaemon_server.8.rst  index.rst  microdnf.8.rst  migrating_to_dnf5.7.rst  requirements.txt  rtd_build.py  setup.py
libdnf/: CMakeLists.txt  config.h.in  libdnf.pc.in  libdnf5.pc.in  version.cpp
libdnf-cli/: CMakeLists.txt  argument_parser.cpp  exception.cpp  libdnf-cli.pc.in  session.cpp  tty.cpp
libdnf5/: CMakeLists.txt  config.h.in  dnf.conf.in  version.cpp
libdnf5-cli/: CMakeLists.txt  argument_parser.cpp  exception.cpp  libdnf5-cli.pc.in  session.cpp  tty.cpp
microdnf/: CMakeLists.txt  README.plugins  argument_parser.cpp  argument_parser.hpp  context.cpp  context.hpp  library.cpp  library.hpp  main.cpp  plugins.cpp  plugins.hpp  utils.cpp  utils.hpp
test/: CMakeLists.txt  lsan-suppresions.txt
(+4155 files in other folders)
